--- a/frontend/src/app/componentes/dialogs/clave-registro-dialog/clave-registro-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/clave-registro-dialog/clave-registro-dialog.component.html
@@ -2,11 +2,11 @@
 <div id="error_messages_dialog" class="alert alert-dismissible alert-warning" style="display: none;" role="alert"></div>
 <form class="row g-3">
     <div class="col-12">
-        <input class="form-control" type="text" name="" id="txtClave" autocomplete="off">
+        <input class="form-control border-juguel" type="text" name="" id="txtClave" autocomplete="off">
     </div>
     <div class="col-12">
         <div class="d-grid gap-2 pt-2">
-            <button (click)="VerificarClave()" class="btn btn-primary btn-block" type="submit">Confirmar</button>
+            <button (click)="VerificarClave()" class="btn btn-juguel btn-block" type="submit">Confirmar</button>
         </div>
     </div>
 </form>
