--- a/frontend/src/app/componentes/dialogs/remision-dialog/remision-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/remision-dialog/remision-dialog.component.html
@@ -4,26 +4,26 @@
     <div id="error_remision" class="alert alert-dismissible alert-warning" style="display: none;" role="alert"></div>
     <form class="row g-3">
         <div class="col-6">
-            <input [(ngModel)]="remisionActiva._id" class="form-control" type="hidden" name="_id" id="identificador" />
+            <input [(ngModel)]="remisionActiva._id" class="form-control border-juguel" type="hidden" name="_id" id="identificador" />
             <ng-container *ngIf="tipoContrato == true">
                 <label for="txtFactura" class="form-label">No. Factura</label>
-                <input [(ngModel)]="remisionActiva.factura" class="form-control" type="text" name="factura" id="txtFactura"/>
+                <input [(ngModel)]="remisionActiva.factura" class="form-control border-juguel" type="text" name="factura" id="txtFactura"/>
             </ng-container>
         </div>
         <div class="col-12">
             <label for="txtConcepto" class="form-label">Concepto</label>
-            <textarea [(ngModel)]="remisionActiva.concepto" name="concepto" id="txtConcepto" cols="30" rows="4" class="form-control"></textarea>
+            <textarea [(ngModel)]="remisionActiva.concepto" name="concepto" id="txtConcepto" cols="30" rows="4" class="form-control border-juguel"></textarea>
         </div>
         <div class="col-12">
             <label for="nTotal" class="form-label">Monto total</label>
             <div class="input-group">
                 <span class="input-group-text">$</span>
-                <input [(ngModel)]="remisionActiva.total" class="form-control" type="number" name="total" id="nTotal"/>
+                <input [(ngModel)]="remisionActiva.total" class="form-control border-juguel" type="number" name="total" id="nTotal"/>
             </div>
         </div>
         
         <div class="col-12 d-flex justify-content-end">
-            <button (click)="CrearRemision()" class="btn btn-primary">Guardar</button>
+            <button (click)="CrearRemision()" class="btn btn-juguel">Guardar</button>
         </div>
     </form>
 </div>
