--- a/frontend/src/app/componentes/header/header.component.html
+++ b/frontend/src/app/componentes/header/header.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-        <a class="navbar-brand" routerLink="/escritorio">Inmobiliaria JGL</a>
+<nav class="navbar navbar-expand-lg navbar-light p-0 border-bottom">
+    <div class="container p-0">
+        <a class="navbar-brand" routerLink="/escritorio" style="position:relative;">
+            <img height="70" src="../../../assets/img/logo_jgl.png" alt="JGL Inmobiliaria">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
