--- a/frontend/src/app/componentes/inquilinos/inquilinos.component.html
+++ b/frontend/src/app/componentes/inquilinos/inquilinos.component.html
@@ -9,7 +9,7 @@
         </div> -->
     </div>
     <div class="col-2 d-flex d-flex justify-content-end">
-        <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="NuevoInquilino()" class="btn btn-primary align-self-start" role="button">Agregar Inquilino</button>
+        <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="NuevoInquilino()" class="btn align-self-start btn-juguel" role="button">Agregar Inquilino</button>
     </div>
 </div>
 <div class="row">
