--- a/frontend/src/app/componentes/propiedades/propiedades.component.css
+++ b/frontend/src/app/componentes/propiedades/propiedades.component.css
@@ -1,3 +1,12 @@
 .group_estado{
     margin-left: -10px;
 }
+.btn-juguel{
+    background-color: #FC9E49;
+    border: 1px solid #ea872e;
+    color:#FFF;
+}
+.btn-juguel:focus{
+    border-color: #ea872e;
+    box-shadow: 0 0 0 0.2rem rgba(252, 158, 73, 0.25);
+}
